# src/controllers/communityController.js
@@ -110,3 +110,13 @@ export const postComment = async (req, res, next) => {
     next(err);
   }
 };
+
+export const getComment = async (req, res, next) => {
+  try {
+    const comment = await Comment.findOne({ _id: req.params.id });
+    if (!comment) return next(createError(400, "Comment is not found"));
+    res.status(200).json({ success: true, comment });
+  } catch (err) {
+    next(err);
+  }
+};
